force-app/main/default/objects/Order/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description
  >Billing cadence locked-in on this Order. Backed by Northstar_Billing_Frequency GVS. Mirrored from the source Quote at Order creation; immutable thereafter (the Order trigger does not update it on Quote changes).</description>
    <inlineHelpText>Locked billing cadence for this Order.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>