force-app/main/default/objects/Order/fields/Implementation_Package__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Package__c</fullName>
    <description
  >Implementation engagement bought with this Order. Backed by Northstar_Implementation_Package GVS. Read by the provisioning service to choose the Provisioning_Requested__e payload.</description>
    <inlineHelpText
  >Implementation engagement attached to this Order.</inlineHelpText>
    <label>Implementation Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Implementation_Package</valueSetName>
    </valueSet>
</CustomField>