force-app/main/default/objects/Order/fields/Provisioning_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Completed_At__c</fullName>
    <description
  >Timestamp when provisioning finished (Completed or Failed). Stamped by the Provisioning_Completed__e subscriber on this Order.</description>
    <inlineHelpText
  >When provisioning finished. Auto-stamped — do not edit.</inlineHelpText>
    <label>Provisioning Completed At</label>
    <type>DateTime</type>
</CustomField>