force-app/main/default/objects/Order/fields/Provisioning_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Started_At__c</fullName>
    <description
  >Timestamp when the provisioning service began work on this Order (typically the Order trigger publishing Provisioning_Requested__e and immediately stamping this field).</description>
    <inlineHelpText
  >When provisioning kicked off. Auto-stamped — do not edit.</inlineHelpText>
    <label>Provisioning Started At</label>
    <type>DateTime</type>
</CustomField>