force-app/main/default/objects/Order/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <description
  >Provisioning lifecycle status on this Order. Inline picklist (not GVS) — Order/Opportunity/Contract/Case use the same labels but with separate value sets so each lifecycle's vocabulary can be revised independently.</description>
    <inlineHelpText
  >Provisioning state of this Order. Maintained by the Provisioning service.</inlineHelpText>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>