force-app/main/default/objects/Order/fields/Requires_AI_Dispatch_Setup__c.field-meta.xml
<CustomField>
    <fullName>Requires_AI_Dispatch_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when this Order includes any AI Dispatch Add-On line item. Stamped by the Order trigger; consumed by the Provisioning_Requested__e payload so the downstream system can pre-stage AI Dispatch credentials.</description>
    <inlineHelpText
  >Auto-set when the Order has an AI Dispatch Add-On line item.</inlineHelpText>
    <label>Requires AI Dispatch Setup</label>
    <type>Checkbox</type>
</CustomField>