force-app/main/default/objects/Order/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <description
  >The sales motion that produced this Order (New Logo, Expansion, Renewal, Services Only, Partner Sourced). Backed by Northstar_Sales_Motion GVS. Mirrored from the source Opportunity at Order creation; immutable thereafter so Order-level reporting always reflects the original motion.</description>
    <inlineHelpText
  >Locked sales motion for this Order — mirrors the source Opportunity.</inlineHelpText>
    <label>Sales Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Sales_Motion</valueSetName>
    </valueSet>
</CustomField>