force-app/main/default/objects/Order/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The closed-won Opportunity that produced this Order. Populated by the Northstar Order-creation wrapper around the Generate-Order accelerator — the vendor controller itself does not set this. Used for revenue reporting and the renewal-source chain.</description>
    <inlineHelpText
  >The Opportunity this Order was generated from. Trigger/flow-set.</inlineHelpText>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Generated Orders</relationshipLabel>
    <relationshipName>Generated_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>