force-app/main/default/objects/Order/fields/Source_Quote__c.field-meta.xml
<CustomField>
    <fullName>Source_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The accepted Quote on the source Opportunity that the Order was generated from. Set by the Order-creation wrapper alongside Source_Opportunity__c.</description>
    <inlineHelpText
  >The accepted Quote this Order was generated from.</inlineHelpText>
    <label>Source Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Generated Orders</relationshipLabel>
    <relationshipName>Generated_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>