force-app/main/default/objects/Order/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description
  >Support tier the customer is entitled to under this Order. Backed by Northstar_Support_Tier GVS. Mirrored from Quote.Premium_Support_Tier__c at Order creation and copied onto the resulting Contract.</description>
    <inlineHelpText>Entitled support tier for this Order.</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Support_Tier</valueSetName>
    </valueSet>
</CustomField>