force-app/main/default/objects/Order/listViews/Pending_Provisioning.listView-meta.xml
<ListView>
    <fullName>Pending_Provisioning</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Provisioning_Status__c</columns>
    <columns>Source_Opportunity__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provisioning_Status__c</field>
        <operation>equals</operation>
        <value>Pending,In Progress</value>
    </filters>
    <label>Pending Provisioning</label>
</ListView>